@@ -28,7 +28,8 @@ __is_null = baseenv_ri.find('is.null')
 
 
 def _formals_fixed(func):
-    if func.typeof is rpy2.rinterface_lib.sexp.RTYPES.SPECIALSXP:
+    if func.typeof in (rpy2.rinterface_lib.sexp.RTYPES.SPECIALSXP,
+                       rpy2.rinterface_lib.sexp.RTYPES.BUILTINSXP):
         res = rpy2.rinterface_lib.sexp.NULL
     else:
         res = __formals(func)
